src/Parser.output
Terminals unused in grammar

   KwExtends
   KwNew
   KwNull
   KwRot
   "end of input"
   Error


Grammar

    0 $accept: program $end

    1 program: KwClass Id "{" program_body "}"
    2        | KwClass Id "{" "}"

    3 program_body: program_body field_decl
    4             | program_body method_decl
    5             | field_decl
    6             | method_decl

    7 field_decl: type mult-field ";"
    8           | type Id "=" constant ";"

    9 mult-field: mult-field "," id
   10           | id
   11           | mult-field "," Id "[" intConstant "]"
   12           | Id "[" intConstant "]"

   13 method_decl: type Id "(" params ")" block
   14            | KwVoid Id "(" params ")" block

   15 params: params_p
   16       | %empty

   17 params_p: params_p "," parametro
   18         | parametro

   19 parametro: type Id

   20 type: KwInt
   21     | KwBool

   22 block: "{" block_p "}"
   23      | "{" "}"

   24 block_p: block_p var-decl
   25        | var-decl
   26        | block_p statement
   27        | statement

   28 var-decl: type var-decl_p ";"

   29 var-decl_p: var-decl_p "," id
   30           | id

   31 id: Id

   32 statement: assign ";"
   33          | method-call_stmt ";"
   34          | KwIf "(" expr ")" block else_opt
   35          | KwWhile "(" expr ")" block
   36          | KwBreak ";"
   37          | KwFor "(" for_assign ";" expr ";" for_assign ")" block
   38          | KwReturn return_expr ";"
   39          | KwContinue ";"
   40          | block

   41 assign: lvalue "=" expr

   42 else_opt: KwElse block
   43         | %empty

   44 for_assign: for_assign "," assign
   45           | assign

   46 return_expr: expr

   47 method-call_stmt: Id "(" method-call_params ")"
   48                 | KwPrint "(" argument ")"
   49                 | KwPrintln "(" argument ")"
   50                 | KwRead "(" ")"
   51                 | KwRandom "(" expr ")"

   52 method-call_expr: Id "(" method-call_params ")"
   53                 | KwPrint "(" argument ")"
   54                 | KwPrintln "(" argument ")"
   55                 | KwRead "(" ")"
   56                 | KwRandom "(" expr ")"

   57 method-call_params: method-call_params_p
   58                   | %empty

   59 method-call_params_p: method-call_params "," expr
   60                     | expr

   61 argument: StringConstant
   62         | expr

   63 lvalue: Id
   64       | Id "[" expr "]"

   65 expr: lvalue
   66     | method-call_expr
   67     | constant
   68     | bin-op
   69     | "!" expr
   70     | "-" expr
   71     | "(" expr ")"

   72 bin-op: arith-op
   73       | rel-op
   74       | cond-op
   75       | eq-op

   76 arith-op: expr "+" expr
   77         | expr "-" expr
   78         | expr "*" expr
   79         | expr "/" expr
   80         | expr "<<" expr
   81         | expr ">>" expr
   82         | expr "%" expr

   83 rel-op: expr "<" expr
   84       | expr ">" expr
   85       | expr "<=" expr
   86       | expr ">=" expr

   87 eq-op: expr "==" expr
   88      | expr "!=" expr

   89 cond-op: expr "&&" expr
   90        | expr "||" expr

   91 constant: intConstant
   92         | CharConstant
   93         | KwTrue
   94         | KwFalse


Terminals, with rules where they appear

$end (0) 0
error (256)
intConstant (258) 11 12 91
CharConstant (259) 92
KwBool (260) 21
KwVoid (261) 14
Id (262) 1 2 8 11 12 13 14 19 31 47 52 63 64
StringConstant (263) 61
KwInt (264) 20
KwBreak (265) 36
KwContinue (266) 39
KwClass (267) 1 2
KwElse (268) 42
KwExtends (269)
KwFor (270) 37
KwIf (271) 34
KwFalse (272) 94
KwTrue (273) 93
KwNew (274)
KwNull (275)
KwReturn (276) 38
KwRot (277)
KwWhile (278) 35
KwPrint (279) 48 53
KwPrintln (280) 49 54
KwRead (281) 50 55
KwRandom (282) 51 56
"{" (283) 1 2 22 23
"}" (284) 1 2 22 23
"[" (285) 11 12 64
"]" (286) 11 12 64
"," (287) 9 11 17 29 44 59
";" (288) 7 8 28 32 33 36 37 38 39
"(" (289) 13 14 34 35 37 47 48 49 50 51 52 53 54 55 56 71
")" (290) 13 14 34 35 37 47 48 49 50 51 52 53 54 55 56 71
"!" (291) 69
"+" (292) 76
"-" (293) 70 77
"/" (294) 79
"*" (295) 78
"%" (296) 82
"=" (297) 8 41
">" (298) 84
"<" (299) 83
">=" (300) 86
"<=" (301) 85
"!=" (302) 88
"&&" (303) 89
"||" (304) 90
"==" (305) 87
"<<" (306) 80
">>" (307) 81
"end of input" (308)
Error (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1 2, on right: 0
program_body (57)
    on left: 3 4 5 6, on right: 1 3 4
field_decl (58)
    on left: 7 8, on right: 3 5
mult-field (59)
    on left: 9 10 11 12, on right: 7 9 11
method_decl (60)
    on left: 13 14, on right: 4 6
params (61)
    on left: 15 16, on right: 13 14
params_p (62)
    on left: 17 18, on right: 15 17
parametro (63)
    on left: 19, on right: 17 18
type (64)
    on left: 20 21, on right: 7 8 13 19 28
block (65)
    on left: 22 23, on right: 13 14 34 35 37 40 42
block_p (66)
    on left: 24 25 26 27, on right: 22 24 26
var-decl (67)
    on left: 28, on right: 24 25
var-decl_p (68)
    on left: 29 30, on right: 28 29
id (69)
    on left: 31, on right: 9 10 29 30
statement (70)
    on left: 32 33 34 35 36 37 38 39 40, on right: 26 27
assign (71)
    on left: 41, on right: 32 44 45
else_opt (72)
    on left: 42 43, on right: 34
for_assign (73)
    on left: 44 45, on right: 37 44
return_expr (74)
    on left: 46, on right: 38
method-call_stmt (75)
    on left: 47 48 49 50 51, on right: 33
method-call_expr (76)
    on left: 52 53 54 55 56, on right: 66
method-call_params (77)
    on left: 57 58, on right: 47 52 59
method-call_params_p (78)
    on left: 59 60, on right: 57
argument (79)
    on left: 61 62, on right: 48 49 53 54
lvalue (80)
    on left: 63 64, on right: 41 65
expr (81)
    on left: 65 66 67 68 69 70 71, on right: 34 35 37 41 46 51 56 59
    60 62 64 69 70 71 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
bin-op (82)
    on left: 72 73 74 75, on right: 68
arith-op (83)
    on left: 76 77 78 79 80 81 82, on right: 72
rel-op (84)
    on left: 83 84 85 86, on right: 73
eq-op (85)
    on left: 87 88, on right: 75
cond-op (86)
    on left: 89 90, on right: 74
constant (87)
    on left: 91 92 93 94, on right: 8 67


State 0

    0 $accept: . program $end
    1 program: . KwClass Id "{" program_body "}"
    2        | . KwClass Id "{" "}"

    KwClass  shift, and go to state 1

    program  go to state 2


State 1

    1 program: KwClass . Id "{" program_body "}"
    2        | KwClass . Id "{" "}"

    Id  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: KwClass Id . "{" program_body "}"
    2        | KwClass Id . "{" "}"

    "{"  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: KwClass Id "{" . program_body "}"
    2        | KwClass Id "{" . "}"
    3 program_body: . program_body field_decl
    4             | . program_body method_decl
    5             | . field_decl
    6             | . method_decl
    7 field_decl: . type mult-field ";"
    8           | . type Id "=" constant ";"
   13 method_decl: . type Id "(" params ")" block
   14            | . KwVoid Id "(" params ")" block
   20 type: . KwInt
   21     | . KwBool

    KwBool  shift, and go to state 6
    KwVoid  shift, and go to state 7
    KwInt   shift, and go to state 8
    "}"     shift, and go to state 9

    program_body  go to state 10
    field_decl    go to state 11
    method_decl   go to state 12
    type          go to state 13


State 6

   21 type: KwBool .

    $default  reduce using rule 21 (type)


State 7

   14 method_decl: KwVoid . Id "(" params ")" block

    Id  shift, and go to state 14


State 8

   20 type: KwInt .

    $default  reduce using rule 20 (type)


State 9

    2 program: KwClass Id "{" "}" .

    $default  reduce using rule 2 (program)


State 10

    1 program: KwClass Id "{" program_body . "}"
    3 program_body: program_body . field_decl
    4             | program_body . method_decl
    7 field_decl: . type mult-field ";"
    8           | . type Id "=" constant ";"
   13 method_decl: . type Id "(" params ")" block
   14            | . KwVoid Id "(" params ")" block
   20 type: . KwInt
   21     | . KwBool

    KwBool  shift, and go to state 6
    KwVoid  shift, and go to state 7
    KwInt   shift, and go to state 8
    "}"     shift, and go to state 15

    field_decl   go to state 16
    method_decl  go to state 17
    type         go to state 13


State 11

    5 program_body: field_decl .

    $default  reduce using rule 5 (program_body)


State 12

    6 program_body: method_decl .

    $default  reduce using rule 6 (program_body)


State 13

    7 field_decl: type . mult-field ";"
    8           | type . Id "=" constant ";"
    9 mult-field: . mult-field "," id
   10           | . id
   11           | . mult-field "," Id "[" intConstant "]"
   12           | . Id "[" intConstant "]"
   13 method_decl: type . Id "(" params ")" block
   31 id: . Id

    Id  shift, and go to state 18

    mult-field  go to state 19
    id          go to state 20


State 14

   14 method_decl: KwVoid Id . "(" params ")" block

    "("  shift, and go to state 21


State 15

    1 program: KwClass Id "{" program_body "}" .

    $default  reduce using rule 1 (program)


State 16

    3 program_body: program_body field_decl .

    $default  reduce using rule 3 (program_body)


State 17

    4 program_body: program_body method_decl .

    $default  reduce using rule 4 (program_body)


State 18

    8 field_decl: type Id . "=" constant ";"
   12 mult-field: Id . "[" intConstant "]"
   13 method_decl: type Id . "(" params ")" block
   31 id: Id .  [",", ";"]

    "["  shift, and go to state 22
    "("  shift, and go to state 23
    "="  shift, and go to state 24

    $default  reduce using rule 31 (id)


State 19

    7 field_decl: type mult-field . ";"
    9 mult-field: mult-field . "," id
   11           | mult-field . "," Id "[" intConstant "]"

    ","  shift, and go to state 25
    ";"  shift, and go to state 26


State 20

   10 mult-field: id .

    $default  reduce using rule 10 (mult-field)


State 21

   14 method_decl: KwVoid Id "(" . params ")" block
   15 params: . params_p
   16       | . %empty  [")"]
   17 params_p: . params_p "," parametro
   18         | . parametro
   19 parametro: . type Id
   20 type: . KwInt
   21     | . KwBool

    KwBool  shift, and go to state 6
    KwInt   shift, and go to state 8

    $default  reduce using rule 16 (params)

    params     go to state 27
    params_p   go to state 28
    parametro  go to state 29
    type       go to state 30


State 22

   12 mult-field: Id "[" . intConstant "]"

    intConstant  shift, and go to state 31


State 23

   13 method_decl: type Id "(" . params ")" block
   15 params: . params_p
   16       | . %empty  [")"]
   17 params_p: . params_p "," parametro
   18         | . parametro
   19 parametro: . type Id
   20 type: . KwInt
   21     | . KwBool

    KwBool  shift, and go to state 6
    KwInt   shift, and go to state 8

    $default  reduce using rule 16 (params)

    params     go to state 32
    params_p   go to state 28
    parametro  go to state 29
    type       go to state 30


State 24

    8 field_decl: type Id "=" . constant ";"
   91 constant: . intConstant
   92         | . CharConstant
   93         | . KwTrue
   94         | . KwFalse

    intConstant   shift, and go to state 33
    CharConstant  shift, and go to state 34
    KwFalse       shift, and go to state 35
    KwTrue        shift, and go to state 36

    constant  go to state 37


State 25

    9 mult-field: mult-field "," . id
   11           | mult-field "," . Id "[" intConstant "]"
   31 id: . Id

    Id  shift, and go to state 38

    id  go to state 39


State 26

    7 field_decl: type mult-field ";" .

    $default  reduce using rule 7 (field_decl)


State 27

   14 method_decl: KwVoid Id "(" params . ")" block

    ")"  shift, and go to state 40


State 28

   15 params: params_p .  [")"]
   17 params_p: params_p . "," parametro

    ","  shift, and go to state 41

    $default  reduce using rule 15 (params)


State 29

   18 params_p: parametro .

    $default  reduce using rule 18 (params_p)


State 30

   19 parametro: type . Id

    Id  shift, and go to state 42


State 31

   12 mult-field: Id "[" intConstant . "]"

    "]"  shift, and go to state 43


State 32

   13 method_decl: type Id "(" params . ")" block

    ")"  shift, and go to state 44


State 33

   91 constant: intConstant .

    $default  reduce using rule 91 (constant)


State 34

   92 constant: CharConstant .

    $default  reduce using rule 92 (constant)


State 35

   94 constant: KwFalse .

    $default  reduce using rule 94 (constant)


State 36

   93 constant: KwTrue .

    $default  reduce using rule 93 (constant)


State 37

    8 field_decl: type Id "=" constant . ";"

    ";"  shift, and go to state 45


State 38

   11 mult-field: mult-field "," Id . "[" intConstant "]"
   31 id: Id .  [",", ";"]

    "["  shift, and go to state 46

    $default  reduce using rule 31 (id)


State 39

    9 mult-field: mult-field "," id .

    $default  reduce using rule 9 (mult-field)


State 40

   14 method_decl: KwVoid Id "(" params ")" . block
   22 block: . "{" block_p "}"
   23      | . "{" "}"

    "{"  shift, and go to state 47

    block  go to state 48


State 41

   17 params_p: params_p "," . parametro
   19 parametro: . type Id
   20 type: . KwInt
   21     | . KwBool

    KwBool  shift, and go to state 6
    KwInt   shift, and go to state 8

    parametro  go to state 49
    type       go to state 30


State 42

   19 parametro: type Id .

    $default  reduce using rule 19 (parametro)


State 43

   12 mult-field: Id "[" intConstant "]" .

    $default  reduce using rule 12 (mult-field)


State 44

   13 method_decl: type Id "(" params ")" . block
   22 block: . "{" block_p "}"
   23      | . "{" "}"

    "{"  shift, and go to state 47

    block  go to state 50


State 45

    8 field_decl: type Id "=" constant ";" .

    $default  reduce using rule 8 (field_decl)


State 46

   11 mult-field: mult-field "," Id "[" . intConstant "]"

    intConstant  shift, and go to state 51


State 47

   20 type: . KwInt
   21     | . KwBool
   22 block: . "{" block_p "}"
   22      | "{" . block_p "}"
   23      | . "{" "}"
   23      | "{" . "}"
   24 block_p: . block_p var-decl
   25        | . var-decl
   26        | . block_p statement
   27        | . statement
   28 var-decl: . type var-decl_p ";"
   32 statement: . assign ";"
   33          | . method-call_stmt ";"
   34          | . KwIf "(" expr ")" block else_opt
   35          | . KwWhile "(" expr ")" block
   36          | . KwBreak ";"
   37          | . KwFor "(" for_assign ";" expr ";" for_assign ")" block
   38          | . KwReturn return_expr ";"
   39          | . KwContinue ";"
   40          | . block
   41 assign: . lvalue "=" expr
   47 method-call_stmt: . Id "(" method-call_params ")"
   48                 | . KwPrint "(" argument ")"
   49                 | . KwPrintln "(" argument ")"
   50                 | . KwRead "(" ")"
   51                 | . KwRandom "(" expr ")"
   63 lvalue: . Id
   64       | . Id "[" expr "]"

    KwBool      shift, and go to state 6
    Id          shift, and go to state 52
    KwInt       shift, and go to state 8
    KwBreak     shift, and go to state 53
    KwContinue  shift, and go to state 54
    KwFor       shift, and go to state 55
    KwIf        shift, and go to state 56
    KwReturn    shift, and go to state 57
    KwWhile     shift, and go to state 58
    KwPrint     shift, and go to state 59
    KwPrintln   shift, and go to state 60
    KwRead      shift, and go to state 61
    KwRandom    shift, and go to state 62
    "{"         shift, and go to state 47
    "}"         shift, and go to state 63

    type              go to state 64
    block             go to state 65
    block_p           go to state 66
    var-decl          go to state 67
    statement         go to state 68
    assign            go to state 69
    method-call_stmt  go to state 70
    lvalue            go to state 71


State 48

   14 method_decl: KwVoid Id "(" params ")" block .

    $default  reduce using rule 14 (method_decl)


State 49

   17 params_p: params_p "," parametro .

    $default  reduce using rule 17 (params_p)


State 50

   13 method_decl: type Id "(" params ")" block .

    $default  reduce using rule 13 (method_decl)


State 51

   11 mult-field: mult-field "," Id "[" intConstant . "]"

    "]"  shift, and go to state 72


State 52

   47 method-call_stmt: Id . "(" method-call_params ")"
   63 lvalue: Id .  ["="]
   64       | Id . "[" expr "]"

    "["  shift, and go to state 73
    "("  shift, and go to state 74

    $default  reduce using rule 63 (lvalue)


State 53

   36 statement: KwBreak . ";"

    ";"  shift, and go to state 75


State 54

   39 statement: KwContinue . ";"

    ";"  shift, and go to state 76


State 55

   37 statement: KwFor . "(" for_assign ";" expr ";" for_assign ")" block

    "("  shift, and go to state 77


State 56

   34 statement: KwIf . "(" expr ")" block else_opt

    "("  shift, and go to state 78


State 57

   38 statement: KwReturn . return_expr ";"
   46 return_expr: . expr
   52 method-call_expr: . Id "(" method-call_params ")"
   53                 | . KwPrint "(" argument ")"
   54                 | . KwPrintln "(" argument ")"
   55                 | . KwRead "(" ")"
   56                 | . KwRandom "(" expr ")"
   63 lvalue: . Id
   64       | . Id "[" expr "]"
   65 expr: . lvalue
   66     | . method-call_expr
   67     | . constant
   68     | . bin-op
   69     | . "!" expr
   70     | . "-" expr
   71     | . "(" expr ")"
   72 bin-op: . arith-op
   73       | . rel-op
   74       | . cond-op
   75       | . eq-op
   76 arith-op: . expr "+" expr
   77         | . expr "-" expr
   78         | . expr "*" expr
   79         | . expr "/" expr
   80         | . expr "<<" expr
   81         | . expr ">>" expr
   82         | . expr "%" expr
   83 rel-op: . expr "<" expr
   84       | . expr ">" expr
   85       | . expr "<=" expr
   86       | . expr ">=" expr
   87 eq-op: . expr "==" expr
   88      | . expr "!=" expr
   89 cond-op: . expr "&&" expr
   90        | . expr "||" expr
   91 constant: . intConstant
   92         | . CharConstant
   93         | . KwTrue
   94         | . KwFalse

    intConstant   shift, and go to state 33
    CharConstant  shift, and go to state 34
    Id            shift, and go to state 79
    KwFalse       shift, and go to state 35
    KwTrue        shift, and go to state 36
    KwPrint       shift, and go to state 80
    KwPrintln     shift, and go to state 81
    KwRead        shift, and go to state 82
    KwRandom      shift, and go to state 83
    "("           shift, and go to state 84
    "!"           shift, and go to state 85
    "-"           shift, and go to state 86

    return_expr       go to state 87
    method-call_expr  go to state 88
    lvalue            go to state 89
    expr              go to state 90
    bin-op            go to state 91
    arith-op          go to state 92
    rel-op            go to state 93
    eq-op             go to state 94
    cond-op           go to state 95
    constant          go to state 96


State 58

   35 statement: KwWhile . "(" expr ")" block

    "("  shift, and go to state 97


State 59

   48 method-call_stmt: KwPrint . "(" argument ")"

    "("  shift, and go to state 98


State 60

   49 method-call_stmt: KwPrintln . "(" argument ")"

    "("  shift, and go to state 99


State 61

   50 method-call_stmt: KwRead . "(" ")"

    "("  shift, and go to state 100


State 62

   51 method-call_stmt: KwRandom . "(" expr ")"

    "("  shift, and go to state 101


State 63

   23 block: "{" "}" .

    $default  reduce using rule 23 (block)


State 64

   28 var-decl: type . var-decl_p ";"
   29 var-decl_p: . var-decl_p "," id
   30           | . id
   31 id: . Id

    Id  shift, and go to state 102

    var-decl_p  go to state 103
    id          go to state 104


State 65

   40 statement: block .

    $default  reduce using rule 40 (statement)


State 66

   20 type: . KwInt
   21     | . KwBool
   22 block: . "{" block_p "}"
   22      | "{" block_p . "}"
   23      | . "{" "}"
   24 block_p: block_p . var-decl
   26        | block_p . statement
   28 var-decl: . type var-decl_p ";"
   32 statement: . assign ";"
   33          | . method-call_stmt ";"
   34          | . KwIf "(" expr ")" block else_opt
   35          | . KwWhile "(" expr ")" block
   36          | . KwBreak ";"
   37          | . KwFor "(" for_assign ";" expr ";" for_assign ")" block
   38          | . KwReturn return_expr ";"
   39          | . KwContinue ";"
   40          | . block
   41 assign: . lvalue "=" expr
   47 method-call_stmt: . Id "(" method-call_params ")"
   48                 | . KwPrint "(" argument ")"
   49                 | . KwPrintln "(" argument ")"
   50                 | . KwRead "(" ")"
   51                 | . KwRandom "(" expr ")"
   63 lvalue: . Id
   64       | . Id "[" expr "]"

    KwBool      shift, and go to state 6
    Id          shift, and go to state 52
    KwInt       shift, and go to state 8
    KwBreak     shift, and go to state 53
    KwContinue  shift, and go to state 54
    KwFor       shift, and go to state 55
    KwIf        shift, and go to state 56
    KwReturn    shift, and go to state 57
    KwWhile     shift, and go to state 58
    KwPrint     shift, and go to state 59
    KwPrintln   shift, and go to state 60
    KwRead      shift, and go to state 61
    KwRandom    shift, and go to state 62
    "{"         shift, and go to state 47
    "}"         shift, and go to state 105

    type              go to state 64
    block             go to state 65
    var-decl          go to state 106
    statement         go to state 107
    assign            go to state 69
    method-call_stmt  go to state 70
    lvalue            go to state 71


State 67

   25 block_p: var-decl .

    $default  reduce using rule 25 (block_p)


State 68

   27 block_p: statement .

    $default  reduce using rule 27 (block_p)


State 69

   32 statement: assign . ";"

    ";"  shift, and go to state 108


State 70

   33 statement: method-call_stmt . ";"

    ";"  shift, and go to state 109


State 71

   41 assign: lvalue . "=" expr

    "="  shift, and go to state 110


State 72

   11 mult-field: mult-field "," Id "[" intConstant "]" .

    $default  reduce using rule 11 (mult-field)


State 73

   52 method-call_expr: . Id "(" method-call_params ")"
   53                 | . KwPrint "(" argument ")"
   54                 | . KwPrintln "(" argument ")"
   55                 | . KwRead "(" ")"
   56                 | . KwRandom "(" expr ")"
   63 lvalue: . Id
   64       | . Id "[" expr "]"
   64       | Id "[" . expr "]"
   65 expr: . lvalue
   66     | . method-call_expr
   67     | . constant
   68     | . bin-op
   69     | . "!" expr
   70     | . "-" expr
   71     | . "(" expr ")"
   72 bin-op: . arith-op
   73       | . rel-op
   74       | . cond-op
   75       | . eq-op
   76 arith-op: . expr "+" expr
   77         | . expr "-" expr
   78         | . expr "*" expr
   79         | . expr "/" expr
   80         | . expr "<<" expr
   81         | . expr ">>" expr
   82         | . expr "%" expr
   83 rel-op: . expr "<" expr
   84       | . expr ">" expr
   85       | . expr "<=" expr
   86       | . expr ">=" expr
   87 eq-op: . expr "==" expr
   88      | . expr "!=" expr
   89 cond-op: . expr "&&" expr
   90        | . expr "||" expr
   91 constant: . intConstant
   92         | . CharConstant
   93         | . KwTrue
   94         | . KwFalse

    intConstant   shift, and go to state 33
    CharConstant  shift, and go to state 34
    Id            shift, and go to state 79
    KwFalse       shift, and go to state 35
    KwTrue        shift, and go to state 36
    KwPrint       shift, and go to state 80
    KwPrintln     shift, and go to state 81
    KwRead        shift, and go to state 82
    KwRandom      shift, and go to state 83
    "("           shift, and go to state 84
    "!"           shift, and go to state 85
    "-"           shift, and go to state 86

    method-call_expr  go to state 88
    lvalue            go to state 89
    expr              go to state 111
    bin-op            go to state 91
    arith-op          go to state 92
    rel-op            go to state 93
    eq-op             go to state 94
    cond-op           go to state 95
    constant          go to state 96


State 74
